--- a/ops/docker/op-stack-go/Dockerfile
+++ b/ops/docker/op-stack-go/Dockerfile
@@ -105,6 +105,11 @@ ARG OP_CONDUCTOR_VERSION=v0.0.0
 RUN --mount=type=cache,target=/root/.cache/go-build cd op-conductor && make op-conductor  \
     GOOS=$TARGETOS GOARCH=$TARGETARCH GITCOMMIT=$GIT_COMMIT GITDATE=$GIT_DATE  VERSION="$OP_CONDUCTOR_VERSION"
 
+FROM --platform=$BUILDPLATFORM builder as op-conductor-mon-builder
+ARG OP_CONDUCTOR_MON_VERSION=v0.0.0
+RUN --mount=type=cache,target=/root/.cache/go-build cd op-conductor-mon && make op-conductor-mon  \
+    GOOS=$TARGETOS GOARCH=$TARGETARCH GITCOMMIT=$GIT_COMMIT GITDATE=$GIT_DATE  VERSION="$OP_CONDUCTOR_MON_VERSION"
+
 FROM --platform=$BUILDPLATFORM builder as da-server-builder
 RUN --mount=type=cache,target=/root/.cache/go-build cd op-plasma && make da-server  \
     GOOS=$TARGETOS GOARCH=$TARGETARCH GITCOMMIT=$GIT_COMMIT GITDATE=$GIT_DATE
@@ -154,6 +159,10 @@ CMD ["op-proposer"]
 FROM --platform=$TARGETPLATFORM $TARGET_BASE_IMAGE as op-conductor-target
 COPY --from=op-conductor-builder /app/op-conductor/bin/op-conductor /usr/local/bin/
 CMD ["op-conductor"]
+
+FROM --platform=$TARGETPLATFORM $TARGET_BASE_IMAGE as op-conductor-mon-target
+COPY --from=op-conductor-builder /app/op-conductor-mon/bin/op-conductor-mon /usr/local/bin/
+CMD ["op-conductor-mon"]
 
 FROM --platform=$TARGETPLATFORM $TARGET_BASE_IMAGE as da-server-target
 COPY --from=da-server-builder /app/op-plasma/bin/da-server /usr/local/bin/
