--- a/op-conductor-mon/Makefile
+++ b/op-conductor-mon/Makefile
@@ -1,10 +1,10 @@
-GITCOMMIT := $(shell git rev-parse HEAD)
-GITDATE := $(shell git show -s --format='%ct')
-VERSION := v0.0.0
+GIT_COMMIT := $(shell git rev-parse HEAD)
+GIT_DATE := $(shell git show -s --format='%ct')
+OP_CONDUCTOR_MON_VERSION := v0.0.0
 
-LDFLAGSSTRING +=-X main.GitCommit=$(GITCOMMIT)
-LDFLAGSSTRING +=-X main.GitDate=$(GITDATE)
-LDFLAGSSTRING +=-X main.Version=$(VERSION)
+LDFLAGSSTRING +=-X main.GitCommit=$(GIT_COMMIT)
+LDFLAGSSTRING +=-X main.GitDate=$(GITDGIT_DATEATE)
+LDFLAGSSTRING +=-X main.Version=$(OP_CONDUCTOR_MON_VERSION)
 LDFLAGS := -ldflags "$(LDFLAGSSTRING)"
 
 all: build
