--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1317,8 +1317,9 @@ jobs:
           command: |
             curl -L https://foundry.paradigm.xyz | bash
             source $HOME/.bashrc
-            ./ops/scripts/install-foundry.sh
-            echo 'export PATH=$HOME/.foundry/bin:$PATH' >> $BASH_ENV
+            SHA=$(jq -r .foundry < versions.json)
+            foundryup -C $SHA
+            echo 'export PATH=$HOME/ foundry/bin:$PATH' >> $BASH_ENV
             source $HOME/.bashrc
             forge --version
       - run:
